feat: first iteration of leaving family group
